fixed snyk badge error, updates in css of why the beaver and what is soajs spacing

--- a/css/page.css
+++ b/css/page.css
@@ -1042,8 +1042,8 @@ hr.green {
     margin: 0;
     padding: 0;
     height: 450px;
-    padding-top: 60px;
-    padding-bottom: 80px;
+    padding-top: 20px;
+    /*padding-bottom: 80px;*/
     width: 100%;
     top: 0;
     left: 0;
